--- a/bootstrap-intro.html
+++ b/bootstrap-intro.html
@@ -5,51 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
   </head>
   <body>
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-title = "name" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
+
+  <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" title="Hello Popover" data-bs-placement="bottom" data-bs-content="Hey there!">Click to toggle popover</button>
+
+  <button id="myTooltip" type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
+    Tooltip on right
   </button>
 
-  <button type="button" class="btn btn-primary" data-title = "new name" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch new demo modal
-  </button>
 
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
+  
 
-  <script type="text/javascript">
-    const myModalEl = document.getElementById('exampleModal')
-      myModalEl.addEventListener('shown.bs.modal', function(event) {
-  // do something...
-      var button = $(event.relatedTarget);
-      var name = button.data("title");
-      var modal = $(this);
-      modal.find('.modal-body').text('New text ' + name);
-      modal.find('.modal-title').text('New text ' + name);
-      })
-  </script>
-
+  
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+  <script type="text/javascript">
+    const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+    const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl)) 
+  </script>
+  <script type="text/javascript">
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+  </script>
+
+  <script type="text/javascript">
+    const myTooltipEl = document.getElementById('myTooltip')
+    const tooltip = bootstrap.Tooltip.getOrCreateInstance(myTooltipEl)
+
+      myTooltipEl.addEventListener('shown.bs.tooltip', () => {
+        // do something...
+        alert("hello!");
+      })
+
+      tooltip.hide()
+  </script>
   </body>
 </html>
